--- a/admin/index.html
+++ b/admin/index.html
@@ -17,7 +17,7 @@
     <div id="login-screen" class="screen active">
         <div class="login-card">
             <div class="login-logo">
-                <span class="gold" data-hydrate="restaurantName">Crazians</span> ADMIN
+                <span class="gold" data-hydrate="restaurantName">Toriko</span> ADMIN
             </div>
             <p class="login-subtitle">Speisekarte verwalten</p>
             <form id="login-form">
