--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <div class="brand">
                 <span class="gold-text" data-hydrate="restaurantName">C R A Z I A N ' s</span>
             </div>
-            <!-- Desktop Nav -->
-            <nav class="category-nav desktop-only">
+            <!-- Category Nav (Ribbon on mobile) -->
+            <nav class="category-nav">
                 <ul id="category-list">
                     <!-- Categories will be injected here -->
                 </ul>
