--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <!-- Categories will be injected here -->
                 </ul>
             </nav>
-            <!-- Mobile Menu Toggle -->
+            <!-- Mobile Only Language Switcher and Spacing -->
             <div class="header-right mobile-only">
                 <div class="lang-switcher">
                     <button class="lang-btn" data-lang="de">DE</button>
@@ -43,14 +43,8 @@
                     <button class="lang-btn" data-lang="tr">TR</button>
                     <button class="lang-btn" data-lang="es">ES</button>
                 </div>
-                <button id="mobile-menu-toggle" aria-label="Menu öffnen">
-                    <div class="hamburger">
-                        <span></span>
-                        <span></span>
-                    </div>
-                </button>
             </div>
-            <!-- Desktop Layout also needs it but let's place it in the desktop nav or separate -->
+            <!-- Desktop Layout language switcher -->
             <div class="desktop-only header-right-desktop">
                 <div class="lang-switcher">
                     <button class="lang-btn" data-lang="de">DE</button>
@@ -61,19 +55,6 @@
             </div>
         </div>
     </header>
-
-    <!-- Mobile Navigation Overlay -->
-    <div id="mobile-menu-overlay" class="mobile-only glass">
-        <button id="close-mobile-menu" aria-label="Menu schließen">✕</button>
-        <div class="mobile-nav-content">
-            <div class="mobile-brand">
-                <span class="gold-text" data-hydrate="restaurantName">C R A Z I A N ' s</span>
-            </div>
-            <ul id="mobile-category-list">
-                <!-- Mobile Categories will be injected here -->
-            </ul>
-        </div>
-    </div>
 
     <main>
         <!-- Hero Section -->
